--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,19 @@
 redis:
   image: redis
   volumes:
-    - /data/redits:/data
+    - /server/data/redis:/data/
 
 mysql:
   image: mysql:5.6
-  enironment:
-    - MYSQL_ROOT_PASSWORD=verysecret
+  environment:
+    - MYSQL_ROOT_PASSWORD=root
   volumes:
-    - /data/mysql:/var/lib/mysql
+    - /server/data/mysql:/var/lib/mysql
 
 service-end:
-  build: .
+  image: xiaxzh/script
   links:
     - redis
     - mysql
+  ports:
+    - "8080:8080"
