push to docker after test

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,19 @@ env:
   - DOCKER_COMPOSE_VERSION=1.21.0
 
 before_install:
+# Build locally
   - docker build -t xiaxzh/script .
+# Install docker-compose
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
+
+# Test step
+script:
+  - true
+
+after_success:
+# Push to docker registry
   - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
   - docker push xiaxzh/script
