change image tag to dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
 
 before_install:
 # Build locally
-  - docker build -t xiaxzh/script .
+  - docker build -t xiaxzh/script:dev .
 # Install docker-compose
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
@@ -35,4 +35,4 @@ script:
 after_success:
 # Push to docker registry
   - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
-  - docker push xiaxzh/script
+  - docker push xiaxzh/script:dev
