--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,42 @@
+# sudo: required
+# services:
+#   - docker
+
+# language: go
+# go:
+#   - "1.9"
+# go_import_path: github.com/sysu-saad-project/service-end
+
+# env:
+#   - DOCKER_COMPOSE_VERSION=1.21.0
+
+# before_install:
+# # Build locally
+#   - docker build -t xiaxzh/script:dev .
+# # Install docker-compose
+#   - sudo rm /usr/local/bin/docker-compose
+#   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+#   - chmod +x docker-compose
+#   - sudo mv docker-compose /usr/local/bin
+# # Create docker network
+#   - docker network create activity
+#   - docker network create dev
+
+# # Test step
+# script:
+#   - git clone https://github.com/sysu-SAAD-project/script.git
+#   - cd script/dev
+#   - docker-compose up -d
+#   - cd ..
+#   - docker-compose up -d
+#   - cd ..
+#   - go test ./...
+
+# after_success:
+# # Push to docker registry
+#   - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
+#   - docker push xiaxzh/script:dev
+
 sudo: required
 services:
   - docker
@@ -5,14 +44,12 @@ services:
 language: go
 go:
   - "1.9"
-go_import_path: github.com/sysu-saad-project/service-end
+go_import_path: github.com/sysu-go-online/service-end
 
 env:
   - DOCKER_COMPOSE_VERSION=1.21.0
 
 before_install:
-# Build locally
-  - docker build -t xiaxzh/script:dev .
 # Install docker-compose
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
@@ -24,6 +61,10 @@ before_install:
 
 # Test step
 script:
+# Compile code
+  - CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
+# Build image locally
+  - docker build -t xiaxzh/script:dev .
   - git clone https://github.com/sysu-SAAD-project/script.git
   - cd script/dev
   - docker-compose up -d
